@@ -198,7 +198,8 @@ PREDEFINED             = DOXYGEN_IGNORE_THIS \
                          CAIRO_HAS_QUARTZ_SURFACE \
                          CAIRO_HAS_PNG_FUNCTIONS \
                          CAIRO_HAS_FT_FONT \
-                         CAIRO_HAS_WIN32_FONT
+                         CAIRO_HAS_WIN32_FONT \
+                         CAIRO_HAS_QUARTZ_FONT
 EXPAND_AS_DEFINED      = 
 SKIP_FUNCTION_MACROS   = YES
 #---------------------------------------------------------------------------
